--- a/Elmla3eb/PointsViewController.xib
+++ b/Elmla3eb/PointsViewController.xib
@@ -40,7 +40,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8Fu-ha-MF1">
-                    <rect key="frame" x="86.5" y="80" width="148.5" height="75"/>
+                    <rect key="frame" x="86.5" y="40" width="148.5" height="75"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nz2-Xd-fDB">
                             <rect key="frame" x="0.0" y="0.0" width="148.5" height="35"/>
@@ -57,19 +57,19 @@
                     </subviews>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lbm-oB-t61">
-                    <rect key="frame" x="8" y="184.5" width="305" height="216"/>
+                    <rect key="frame" x="8" y="144.5" width="305" height="216"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="3k8-pk-Ir0" userLabel="1000Point">
-                            <rect key="frame" x="27" y="37.5" width="36.5" height="35"/>
+                            <rect key="frame" x="28" y="37.5" width="34.5" height="35"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6zj-aM-Oe3">
-                                    <rect key="frame" x="1.5" y="0.0" width="33.5" height="17"/>
+                                <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="??" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6zj-aM-Oe3">
+                                    <rect key="frame" x="10" y="0.0" width="15" height="17"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                     <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Point" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tjd-29-P7h">
-                                    <rect key="frame" x="1.5" y="18" width="34" height="17"/>
+                                    <rect key="frame" x="0.5" y="18" width="34" height="17"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                     <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -77,16 +77,16 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="FP0-G7-37g" userLabel="5000Point">
-                            <rect key="frame" x="134" y="37.5" width="36" height="35"/>
+                            <rect key="frame" x="135" y="37.5" width="34" height="35"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wL-hy-WIb">
-                                    <rect key="frame" x="0.0" y="0.0" width="36" height="17"/>
+                                <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="??" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wL-hy-WIb">
+                                    <rect key="frame" x="9.5" y="0.0" width="15" height="17"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                     <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Point" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MLZ-fL-5G6">
-                                    <rect key="frame" x="1" y="18" width="34" height="17"/>
+                                    <rect key="frame" x="0.0" y="18" width="34" height="17"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                     <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -94,16 +94,16 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="JgE-vN-T9w" userLabel="10000Point">
-                            <rect key="frame" x="239" y="37.5" width="42.5" height="35"/>
+                            <rect key="frame" x="243.5" y="37.5" width="34" height="35"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flS-yW-cSp">
-                                    <rect key="frame" x="0.0" y="0.0" width="42.5" height="17"/>
+                                <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="??" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flS-yW-cSp">
+                                    <rect key="frame" x="9.5" y="0.0" width="15" height="17"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                     <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Point" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dk0-b2-Ir3">
-                                    <rect key="frame" x="4.5" y="18" width="34" height="17"/>
+                                    <rect key="frame" x="0.0" y="18" width="34" height="17"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                     <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -130,7 +130,7 @@
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v9d-ew-cYP" customClass="UIViewX" customModule="Elmla3eb" customModuleProvider="target">
                             <rect key="frame" x="18" y="80.5" width="54.5" height="54"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WhiteFootball" translatesAutoresizingMaskIntoConstraints="NO" id="x3U-5t-fZl">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="question_mark_filled" translatesAutoresizingMaskIntoConstraints="NO" id="x3U-5t-fZl">
                                     <rect key="frame" x="13.5" y="14" width="27.5" height="27"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="x3U-5t-fZl" secondAttribute="height" multiplier="1:1" id="KUM-gT-Qga"/>
@@ -156,7 +156,7 @@
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NT1-ak-LMZ" customClass="UIViewX" customModule="Elmla3eb" customModuleProvider="target">
                             <rect key="frame" x="125.5" y="80.5" width="54.5" height="54"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WhiteTshirt" translatesAutoresizingMaskIntoConstraints="NO" id="Nii-XV-g73">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="question_mark_filled" translatesAutoresizingMaskIntoConstraints="NO" id="Nii-XV-g73">
                                     <rect key="frame" x="14" y="14" width="27.5" height="27"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="Nii-XV-g73" secondAttribute="height" multiplier="1:1" id="h4E-FB-5CW"/>
@@ -181,7 +181,7 @@
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WHV-Ga-mGn" customClass="UIViewX" customModule="Elmla3eb" customModuleProvider="target">
                             <rect key="frame" x="233" y="80.5" width="54.5" height="54"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WhiteCup" translatesAutoresizingMaskIntoConstraints="NO" id="V7A-BP-9Bx">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="question_mark_filled" translatesAutoresizingMaskIntoConstraints="NO" id="V7A-BP-9Bx">
                                     <rect key="frame" x="14.5" y="14" width="27" height="27"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="V7A-BP-9Bx" secondAttribute="height" multiplier="1:1" id="DQk-7F-ydE"/>
@@ -261,7 +261,7 @@
                 <constraint firstItem="Lbm-oB-t61" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" constant="-15" id="YyX-Qs-Adb"/>
                 <constraint firstItem="bNl-lq-zFF" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" id="bGC-YB-klJ"/>
                 <constraint firstItem="2Rn-og-ULu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="eeG-6u-B7P"/>
-                <constraint firstItem="8Fu-ha-MF1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="is8-fI-eTt"/>
+                <constraint firstItem="8Fu-ha-MF1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="is8-fI-eTt"/>
                 <constraint firstItem="Lbm-oB-t61" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.38" id="thc-YX-4kx"/>
                 <constraint firstItem="bNl-lq-zFF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="veN-6v-Nm7"/>
             </constraints>
@@ -270,8 +270,6 @@
     </objects>
     <resources>
         <image name="BackGround" width="1242" height="2208"/>
-        <image name="WhiteCup" width="75" height="75"/>
-        <image name="WhiteFootball" width="78" height="78"/>
-        <image name="WhiteTshirt" width="75" height="75"/>
+        <image name="question_mark_filled" width="75" height="75"/>
     </resources>
 </document>
